RESOLVED FIXED132404
Argument flush formats should not be presumed to be JSValue since 'this' is weird
https://bugs.webkit.org/show_bug.cgi?id=132404
Summary Argument flush formats should not be presumed to be JSValue since 'this' is w...
Filip Pizlo
Reported 2014-04-30 15:11:43 PDT
Patch forthcoming.
Attachments
the patch (7.86 KB, patch)
2014-04-30 15:19 PDT, Filip Pizlo
fpizlo: review+
Filip Pizlo
Comment 1 2014-04-30 15:19:45 PDT
Created attachment 230529 [details] the patch
Filip Pizlo
Comment 2 2014-04-30 15:21:22 PDT
Comment on attachment 230529 [details] the patch r=msaboff
Filip Pizlo
Comment 3 2014-04-30 15:22:59 PDT
Note You need to log in before you can comment on or make changes to this bug.