Source/JavaScriptCore/dfg/DFGValueSource.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012 Apple Inc. All rights reserved.
+ * Copyright (C) 2012, 2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -69,6 +69,11 @@ void ValueSource::dump(PrintStream& out) const
         RELEASE_ASSERT_NOT_REACHED();
         break;
     }
+}
+
+void ValueSource::dumpInContext(PrintStream& out, DumpContext*) const
+{
+    dump(out);
 }
 
 } } // namespace JSC::DFG
